# git-repo-evaluator

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
api/: main.py
cli/: __init__.py  claude_analysis.py  evaluator.py  github_client.py  main.py  models.py  storage.py  vulnerabilities.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx
dashboard/src/components/: GradeBadge.tsx  RadarScores.tsx  VulnerabilityTable.tsx
dashboard/src/lib/: api.ts
dashboard/src/pages/: EvaluationDetail.tsx  Home.tsx
data/: evaluations.csv  repos.csv  vulnerabilities.csv
tests/: test_api.py  test_models.py  test_storage.py  test_vulnerabilities.py
